Fix flickering with dark theme

--- a/src/features/edit-profile/ui/profile-card/ProfileCard.module.scss
+++ b/src/features/edit-profile/ui/profile-card/ProfileCard.module.scss
@@ -1,8 +1,4 @@
 .wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   height: var(--height-of-main-section);
 }
 
@@ -11,7 +7,5 @@
 }
 
 .field-wrapper {
-  justify-content: space-between;
-  display: flex;
-  align-items: center;
+  margin-top: 5px;
 }
