--- a/src/shared/ui/dropdown/Dropdown.module.scss
+++ b/src/shared/ui/dropdown/Dropdown.module.scss
@@ -10,8 +10,11 @@
   padding: 5px 10px 5px 5px;
   border-radius: 0.5rem;
   z-index: 3;
-  display: none;
   border: 1px solid var(--low-emphasis);
+  opacity: 0;
+  transform: translateY(-10px);
+  visibility: hidden;
+  transition: 0.3s;
 }
 
 .item {
@@ -32,6 +35,9 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  transform: translateY(0);
+  opacity: 1;
+  visibility: visible;
 }
 
 .svg {
